networking/30-virtual-service-ratings-v2-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
    - ratings
  http:
  - route:
    - destination:
        host: ratings
        subset: v2
    fault:
      delay:
        percent: 100
        fixedDelay: 2s
