networking/31-virtual-service-details-v1-timeout.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details
spec:
  hosts:
    - details
  http:
  - route:
    - destination:
        host: details
        subset: v1
    timeout: 0.5s
